feat: agrego eslint en int-products-ms
