# int-products-ms/swagger/docs/specification.yaml
@@ -43,7 +43,7 @@ paths:
           schema:
             type: integer
       responses:
-        '200':
+        "200":
           description: "Lista de productos filtrados"
           content:
             application/json:
@@ -54,62 +54,62 @@ paths:
                     type: array
                     items:
                       type: object
-        '400':
+        "400":
           description: "Error en los parámetros"
       security:
         - AuthToken: []
         - SiteHeader: []
-  
+
   /api/category/{category}:
-   get:
-     summary: Obtener productos por categoría
-     tags:
-       - Category
-     parameters:
-       - in: path
-         name: category
-         required: true
-         schema:
-           type: string
-         description: "Nombre de la categoría (ej: smartphones)"
-      #  - in: query
-      #    name: limit
-      #    schema:
-      #      type: integer
-      #    description: Cantidad de productos a devolver
-      #  - in: query
-      #    name: offset
-      #    schema:
-      #      type: integer
-      #    description: Desplazamiento inicial de los productos
-     responses:
-       200:
-         description: Lista de productos por categoría
-         content:
-           application/json:
-             schema:
-               type: object
-               properties:
-                 products:
-                   type: array
-                   items:
-                     type: object
-            
+    get:
+      summary: Obtener productos por categoría
+      tags:
+        - Category
+      parameters:
+        - in: path
+          name: category
+          required: true
+          schema:
+            type: string
+          description: "Nombre de la categoría (ej: smartphones)"
+        #  - in: query
+        #    name: limit
+        #    schema:
+        #      type: integer
+        #    description: Cantidad de productos a devolver
+        #  - in: query
+        #    name: offset
+        #    schema:
+        #      type: integer
+        #    description: Desplazamiento inicial de los productos
+      responses:
+        200:
+          description: Lista de productos por categoría
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  products:
+                    type: array
+                    items:
+                      type: object
+
   /api/products/free_shipping:
-   get:
-     summary: Listar productos con envío gratuito
-     tags:
-       - Products
-     responses:
-       200:
-         description: Lista de IDs de productos con envío gratis
-         content:
-           application/json:
-             schema:
-               type: array
-               items:
-                 type: integer
-              
+    get:
+      summary: Listar productos con envío gratuito
+      tags:
+        - Products
+      responses:
+        200:
+          description: Lista de IDs de productos con envío gratis
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: integer
+
   /api/products/{id}:
     delete:
       summary: Eliminar producto por ID
